<resources>
    <string name="app_name">Dasha</string>
    <string name="action_settings">Settings</string>
    <string name="button">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="login_status"></string>
    <string name="back">Home</string>
    <string name="user">User</string>
    <string name="startDateStr">Start date</string>
    <string name="endDateStr">End date</string>
    <string name="get_str">Get</string>
    <string name="header">Machine</string>
    <string name="configuration">Setting</string>
    <string name="localServerAddr">Local server</string>
    <string name="autoDetectServer_btn">Find</string>
    <string name="cloudServerAddr">Cloud server</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="customMode">Local</string>
    <string name="autoMode">Auto</string>
    <string name="dashaicon">dasha logo</string>
    <string name="atopLogo">atop logo</string>
    <string name="channel_name">dashaChannel</string>
    <string name="channel_description">dashaNotification</string>
    <string name="dashaVersion">Ver.2.1</string>
    <string name="newFeedDescription">click on dasha to see new feed</string>
    <string name="title_activity_scrolling">News Feed</string>
    <string name="myFile">jfuhsduy</string>
    <string name="alarm_btn">Stop</string>
    <string name="alarm_text">Alarm</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

    </string>
</resources>
