<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MachineActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="320dp"
        android:layout_height="450dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/myLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="370dp"
                android:layout_height="78dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.534">


                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#c4c8c9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/header" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="#c4c8c9" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />
            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="128dp">

                <TextView
                    android:id="@+id/start_lbl"
                    android:layout_width="63dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/startDateStr"
                    app:layout_constraintBottom_toTopOf="@+id/end_lbl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.027"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/startDate_lbl"
                    android:layout_width="121dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="12dp"
                    android:text=""
                    app:layout_constraintBottom_toTopOf="@+id/endDate_lbl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.098"
                    app:layout_constraintStart_toEndOf="@+id/start_lbl" />

                <TextView
                    android:id="@+id/end_lbl"
                    android:layout_width="63dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="36dp"
                    android:text="@string/endDateStr"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.027"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/endDate_lbl"
                    android:layout_width="121dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="36dp"
                    android:text=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.098"
                    app:layout_constraintStart_toEndOf="@+id/end_lbl" />

                <Button
                    android:id="@+id/get_btn"
                    android:layout_width="54dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/buttonColor"
                    android:text="@string/get_str"
                    app:layout_constraintBottom_toTopOf="@+id/back_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.971"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/back_btn"
                    android:layout_width="54dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="28dp"
                    android:background="@color/buttonColor"
                    android:text="@string/back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.971"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.anychart.AnyChartView
                android:id="@+id/myChart"
                android:layout_width="match_parent"
                android:layout_height="340dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="93dp"></com.anychart.AnyChartView>

            <ImageView
                android:id="@+id/credit"
                android:layout_width="124dp"
                android:layout_height="53dp"
                android:contentDescription="@string/atopLogo"
                android:src="@drawable/atoplogo"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="662dp" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>